Fix menu screen shifts when switching to German on smaller screens

--- a/game/src/menu/menu.scss
+++ b/game/src/menu/menu.scss
@@ -95,6 +95,9 @@
         color: $light-text-color;
         text-align: center;
 
+        font-size: 16px;
+        height: 64px;
+
         cursor: pointer;
 
         b {
